gl31-master/src/test/deca/context/valid/complet/meth_appel.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 20/01/2021

class A{}

class B extends A{}

class Test{
    int methTest(int param1){
        return param1*2;
    }

    float methTest2(int param1, boolean boo, float c){
        if(boo == true){
            return param1*2.09e5;
        }
        else{
            return param1;
        }
    }

    A test(){
      return new B();

      }
}
{
    Test t = new Test();
    int a = t.methTest(2);
    int b = t.methTest(a);
    float f = t.methTest2(3,false, 3);
    t.test();
}